RESOLVED FIXED69468
media/video-loop.html is failing on Lion because of negative currentTime()
https://bugs.webkit.org/show_bug.cgi?id=69468
Summary media/video-loop.html is failing on Lion because of negative currentTime()
Jer Noble
Reported 2011-10-05 14:57:56 PDT
Both the following tests fail because the AVFoundation back-end on Lion can report a negative currentTime. media/video-loop.html media/video-pause-immediately.html
Attachments
Patch (1.88 KB, patch)
2011-10-06 14:10 PDT, Jer Noble
darin: review+
Jer Noble
Comment 1 2011-10-06 14:07:21 PDT
Actually, after digging into this, only video-loop.html is being affected by the negative-time problem.
Jer Noble
Comment 2 2011-10-06 14:10:19 PDT
Darin Adler
Comment 3 2011-10-06 16:07:39 PDT
Comment on attachment 110017 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=110017&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:435 > + float seconds = narrowPrecisionToFloat(CMTimeGetSeconds(itemTime)); > + return max(seconds, 0.0f); Should not need a local variable for this. Probably reads better without it.
Jer Noble
Comment 4 2011-10-06 16:37:25 PDT
(In reply to comment #3) > (From update of attachment 110017 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=110017&action=review > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:435 > > + float seconds = narrowPrecisionToFloat(CMTimeGetSeconds(itemTime)); > > + return max(seconds, 0.0f); > > Should not need a local variable for this. Probably reads better without it. You're right; I was thinking of the MAX macro. I'll change this. Thanks!
Jer Noble
Comment 5 2011-10-10 15:00:40 PDT
Note You need to log in before you can comment on or make changes to this bug.