media/video-loop.html is failing on Lion because of negative currentTime() https://bugs.webkit.org/show_bug.cgi?id=69468

Reviewed by Darin Adler.

No new tests. Covered by media/video-loop.html test.

AVFoundation will occasionally return small, negative current times during loop operations.
Clean up these negative times before returning the currentTime.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::currentTime):

Canonical link: https://commits.webkit.org/85830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97093 268f45cc-cd09-0410-ab3c-d52691b4dbfc